--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.88"
 macroquad = "0.4.13"
+pest = "2.7.12"
+pest_derive = "2.7.12"
